test/spec_vectors/return_call_ref/ok/module_1.wat
(module (type $t (func)) (type $t1 (func (result (ref $t)))) (type $t2 (func (result (ref null $t)))) (type $t3 (func (result (ref func)))) (type $t4 (func (result (ref null func)))) (elem declare func $f11 $f22 $f33 $f44) (func $f11 (result (ref $t)) (return_call_ref $t1 (ref.func $f11))) (func $f21 (result (ref null $t)) (return_call_ref $t1 (ref.func $f11))) (func $f22 (result (ref null $t)) (return_call_ref $t2 (ref.func $f22))) (func $f31 (result (ref func)) (return_call_ref $t1 (ref.func $f11))) (func $f33 (result (ref func)) (return_call_ref $t3 (ref.func $f33))) (func $f41 (result (ref null func)) (return_call_ref $t1 (ref.func $f11))) (func $f42 (result (ref null func)) (return_call_ref $t2 (ref.func $f22))) (func $f43 (result (ref null func)) (return_call_ref $t3 (ref.func $f33))) (func $f44 (result (ref null func)) (return_call_ref $t4 (ref.func $f44))))